@@ -42,9 +42,10 @@ dependencies {
 }
 
 task runCodeServer(type: JavaExec) {
-    classpath = project(':ponysdk').configurations.gwtdev
+    dependsOn ':ponysdk:classes'
+    classpath = files({ project(':ponysdk').configurations.gwtdev })
     classpath += sourceSets.main.runtimeClasspath
-    main = 'com.google.gwt.dev.codeserver.CodeServer'
+    mainClass = 'com.google.gwt.dev.codeserver.CodeServer'
     args = [
             '-src', '../ponysdk/src/main/java',
             '-generateJsInteropExports', '-noincremental',
@@ -56,20 +57,19 @@ task runCodeServer(type: JavaExec) {
 
 task runSampleSpring(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    classpath += files(buildDir.getAbsolutePath() + '/gwt/gwt')
-    classpath += files(buildDir.getAbsolutePath() + '/resources')
-    classpath += files(buildDir.getAbsolutePath() + '/resources/main')
-    main = 'com.ponysdk.impl.spring.MainSpring'
-    //jvmArgs = ['-server', '-Xmx512m', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n']
-    jvmArgs = ['-Xmx8g', '-Xms8g', '-XX:-DisableExplicitGC', '-Xlog:safepoint=info,gc*=info,gc+age=trace:file=run_sample_spring_gc.log:time,uptime,level,tags:filesize=10M,filecount=100', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n', '-XX:+UseConcMarkSweepGC', '-Xmn7500M', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:CMSInitiatingOccupancyFraction=80']
+    classpath += files(layout.buildDirectory.get().asFile.path + '/gwt/gwt')
+    classpath += files(layout.buildDirectory.get().asFile.path + '/resources')
+    classpath += files(layout.buildDirectory.get().asFile.path + '/resources/main')
+    mainClass = 'com.ponysdk.impl.spring.MainSpring'
+    jvmArgs = ['-Xmx2g', '-Dlog4j.configurationFile=etc/log4j2.xml']
 }
 
 task runSampleTrading(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
-    classpath += files(buildDir.getAbsolutePath() + '/gwt/debug/gwt')
-    classpath += files(buildDir.getAbsolutePath() + '/gwt/prod/gwt')
-    classpath += files(buildDir.getAbsolutePath() + '/resources/etc')
-    main = 'com.ponysdk.impl.java.Main'
+    classpath += files(layout.buildDirectory.get().asFile.path + '/gwt/debug/gwt')
+    classpath += files(layout.buildDirectory.get().asFile.path + '/gwt/prod/gwt')
+    classpath += files(layout.buildDirectory.get().asFile.path + '/resources/etc')
+    mainClass = 'com.ponysdk.impl.java.Main'
     jvmArgs = ['-server', '-Xmx512m', '-Dponysdk.application.id=trading', '-Dponysdk.application.name="Trading sample"', '-Dponysdk.application.description="Trading Sample"',
                '-Dponysdk.application.context.name=trading', '-Dponysdk.entry.point.class=com.ponysdk.sample.client.TradingSampleEntryPoint',
                '-Dponysdk.application.javascripts=script/ponysdk.js;script/widget.js;script/sample.js;script/less.js', '-Dponysdk.application.stylesheets=css/sample.less;css/ponysdk.less']
